--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.2",
     "@reduxjs/toolkit": "^1.8.0",
     "native-base": "^3.3.7",
     "react": "17.0.2",
